--- a/cv.html
+++ b/cv.html
@@ -46,10 +46,24 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Work History</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
+                    </div>
+                </div>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="10/2011 - 10/2015">
+                        <h4>Tesco</h4>
+                        <p>Store Assistant</p>
+                    </div>
+                    <div class="timeline-item" data-dates="03/2016 - 08/2019">
+                        <h4>Pets At Home</h4>
+                        <p>Pet Care Advisor</p>
+                    </div>
+                    <div class="timeline-item" data-dates="11/2019 - Present">
+                        <h4>Home Bargains</h4>
+                        <p>Sotre Assistant</p>
                     </div>
                 </div>
             </div>
@@ -82,8 +96,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I am studying for a diploma in Software Development, specifically in the area of Fullstack Development, 
-                                    through the Code Institute. Studying happens most evenings after I come home from my job in retail.
+                                    ADD TEXT HERE
                                 </p>
                             </div>
                         </div>
@@ -98,13 +111,13 @@
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
                                 <span class="sr-only">70% complete</span>
                             </div>
                             <span class="progress-type">Javascript</span>
