Added google maps with {broken} markers

--- a/interests.html
+++ b/interests.html
@@ -160,9 +160,12 @@
             </div>
         </div>
     </footer>
-    <script>
-        var APIKey = "AIzaSyCjcaNGCCNvs7ox8fm94S8dm1oymjlXGMA";
+    <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
     </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjcaNGCCNvs7ox8fm94S8dm1oymjlXGMA&callback=initMap">
+    </script>
+    <script src="assets/js/maps.js"></script>
 </body>
 
 </html>
