--- a/github.html
+++ b/github.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" href="assets/css/github-styles.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+    <script src="assets/js/github-information.js"></script>
 </head>
 
 <body>
